-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
None
-
6.6
-
None
-
d772b2fe5 (dev), 1df14f1f1 (dev)
Steps to reproduce in widgetgraphgallery > Bar Graph:
- change selection mode to Slice into Column
- select a bar
- return from slice view
- change selection mode to Slice into Row
- select a bar
-> empty slice view
| For Gerrit Dashboard: QTBUG-113675 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 506440,4 | Fix empty slice graph issue in widgetgraphgallery | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
| 506461,5 | Fix empty graph issue in bars | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |