Fix empty slice graph issue in widgetgraphgallery

Task-number: QTBUG-113675
Change-Id: Ib27aa7607ad87d73d31712976e96cc3e441a063c
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>